--- a/index.html
+++ b/index.html
@@ -12,42 +12,41 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/typography.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/header.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/button.css">
-	<link rel="stylesheet" type="text/css" href="./assets/styles/hero.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/nav.css">
 </head>
 <body>
 	<section class="section -hero">
 		<div class="container">
-				<header class="header">
+			<header class="header">
 				<img class="header__logo" src="./assets/img/logo.png">
-				<nav class="nav">
-					<a class="nav__link" href="#">Main</a>
-					<a class="nav__link" href="#">About</a>
-					<a class="nav__link" href="#">Game features</a>
-					<a class="nav__link" href="#">System requirements</a>
-					<a class="nav__link" href="#">Quotes</a>
-				</nav>
-				<div class="hero__left">
-					<div class="lang">Eng</div>
-			<div class="partners">
-				<button class="partners__btn">
-					<img src="./assets/img/xbox-icon.png">
-				</button>
-				<button class="partners__btn">
-					<img src="./assets/img/steam-icon.png">
-				</button>
-				<button class="partners__btn"></button>
-			</div>
-				</div>
-				
-		</div>
+					<nav class="nav">
+						<a class="nav__link" href="#">Main</a>
+						<a class="nav__link" href="#">About</a>
+						<a class="nav__link" href="#">Game features</a>
+						<a class="nav__link" href="#">System requirements</a>
+						<a class="nav__link" href="#">Quotes</a>
+					</nav>
+						<div class="header__partners">
+							<div class="lang">Eng</div>
+							<div>
+								<a class="header__partner">
+								<img src="./assets/img/xbox-icon.png">
+							</a>
+							<a class="header__partner">
+								<img src="./assets/img/steam-icon.png">
+							</a>
+							</div>
+					</div>
 			</header>
-			<div>
-		<h1 class="title">Survive at all costs</h1>
-		<h2 class="subtitle">Experience new social battle royale game</h2>
-		<button class="btn"><p>Buy Now on Steam </p><p class="cost">$14.99</p></button>	
 		</div>
-	</div>	
+		<div class="container">
+			<div class="content">
+				<h1 class="title">Survive at all costs</h1>
+				<h2 class="subtitle">Experience new social battle royale game</h2>
+				<button class="btn"><p>Buy Now on Steam </p><p class="cost">$14.99</p></button>	
+			</div>
+		</div>	
+		<div class="scroll-down">The story</div>		
 	</section>
 </body>
 </html>
