--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/header.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/button.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/nav.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/scroll-down.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/about.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/slider.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<section class="section -hero">
@@ -28,6 +32,7 @@
 					</nav>
 						<div class="header__partners">
 							<div class="lang">Eng</div>
+							<div class="burger"></div>
 							<div>
 								<a class="header__partner">
 								<img src="./assets/img/xbox-icon.png">
@@ -47,6 +52,36 @@
 			</div>
 		</div>	
 		<div class="scroll-down">The story</div>		
+	</section>
+	<section class="section -about">
+		<div class="container -about">
+			<div class="about__left">
+				<div class="about__header">
+					<h3 class="subtitle -about">What is SOS?</h3>
+					<h2 class="title -about">Social battle royal game</h2>
+				</div>
+				<div class="about__body">
+					Each round, you and 15 other contestants compete to
+					escape a deadly island filled with monsters. The trick is: three people can survive. Will you run
+					solo or form friendships with others to escape? 
+					Making the right decisions could be the
+					difference between life and death.
+				</div>
+			</div>
+			<div class="slider">
+				<img class="slider__item -f" src="./assets/img/image-first.png">
+				<img class="slider__item -s" src="./assets/img/image-second.png">
+				<img class="slider__item -t" src="./assets/img/image-third.jpg">
+				<button class="slider__next"></button>
+				<div class="slider__control">
+					<button class="control"></button>
+					<button class="control"></button>
+					<button class="control"></button>
+					<button class="control"></button>
+					<button class="control"></button>
+				</div>
+			</div>
+		</div>
 	</section>
 </body>
 </html>
