--- a/index.html
+++ b/index.html
@@ -58,27 +58,29 @@
 			<div class="about__left">
 				<div class="about__header">
 					<h3 class="subtitle -about">What is SOS?</h3>
-					<h2 class="title -about">Social battle royal game</h2>
+					<h2 class="title -about">Social battle royale game</h2>
 				</div>
 				<div class="about__body">
-					Each round, you and 15 other contestants compete to
-					escape a deadly island filled with monsters. The trick is: three people can survive. Will you run
+					<p class="about__info">Each round, <span class="about__span">you</span> and <span class="about__span">15</span> other contestants compete to
+					escape a deadly island filled with monsters. The trick is: <span class="about__span"> three</span> people can survive. Will you run
 					solo or form friendships with others to escape? 
 					Making the right decisions could be the
-					difference between life and death.
+					difference between <span class="about__border">life and death.</span></p>
 				</div>
 			</div>
 			<div class="slider">
-				<img class="slider__item -f" src="./assets/img/image-first.png">
-				<img class="slider__item -s" src="./assets/img/image-second.png">
-				<img class="slider__item -t" src="./assets/img/image-third.jpg">
-				<button class="slider__next"></button>
-				<div class="slider__control">
-					<button class="control"></button>
-					<button class="control"></button>
-					<button class="control"></button>
-					<button class="control"></button>
-					<button class="control"></button>
+				<div class="slider__item">
+					<img class="item -f" src="./assets/img/image-first.png">
+					<img class="item -s" src="./assets/img/image-second.png">
+					<img class="item -t" src="./assets/img/image-third.jpg">
+					<div class="slider__controls">
+						<button class="control"></button>
+						<button class="control"></button>
+						<button class="control"></button>
+						<button class="control"></button>
+						<button class="control"></button>
+					</div>
+					<button class="slider__next"></button>
 				</div>
 			</div>
 		</div>
