--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>SOS</title>
 	<meta charset="utf-8">
+	<link rel="SHORTCUT ICON" href="./assets/img/favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/section.css">
@@ -32,20 +33,20 @@
 			<header class="header">
 				<img class="logo" src="./assets/img/logo.png">
 					<nav class="nav">
-						<a class="nav__link" href="#">Main</a>
-						<a class="nav__link" href="#">About</a>
-						<a class="nav__link" href="#">Game features</a>
-						<a class="nav__link" href="#">System requirements</a>
-						<a class="nav__link" href="#">Quotes</a>
+						<a class="nav__link" href="#hero">Main</a>
+						<a class="nav__link" href="#about">About</a>
+						<a class="nav__link" href="#features">Game features</a>
+						<a class="nav__link" href="#system">System requirements</a>
+						<a class="nav__link" href="#quotes">Quotes</a>
 					</nav>
 						<div class="header__partners">
 							<div class="lang">Eng</div>
 							<div class="burger"></div>
 							<div>
-								<a class="header__partner">
+								<a href="https://market.yandex.ru/product--igrovaia-pristavka-microsoft-xbox-one-s-1-tb/151671346?clid=603&utm_source=google&utm_medium=search&utm_campaign=gm_index_clicks_dsa_search_rus&utm_term=dsa-43413768253&utm_content=cid%3A10128936170%7Cgid%3A102987767993%7Caid%3A437461548690%7Cph%3Adsa-43413768253%7Cpt%3A%7Cpn%3A%7Csrc%3A%7Cst%3Ag" class="header__partner" target="blank">
 								<img src="./assets/img/xbox-icon.png">
 							</a>
-							<a class="header__partner">
+							<a href="https://s.team/p/cndr-gdgn/jtjthvnm" class="header__partner" target="blank">
 								<img src="./assets/img/steam-icon.png">
 							</a>
 							</div>
@@ -56,12 +57,12 @@
 			<div class="content">
 				<h1 class="title">Survive at all costs</h1>
 				<h2 class="subtitle">Experience new social battle royale game</h2>
-				<button class="btn"><p>Buy Now on Steam </p><p class="cost">$14.99</p></button>	
+				<button class="btn -hero"><p>Buy Now on Steam </p><p class="cost">$14.99</p></button>	
 			</div>
 		</div>	
 		<div class="scroll-down">The story</div>		
 	</section>
-	<section class="section -about">
+	<section id="about" class="section -about">
 		<div class="container -about">
 			<div class="about__left">
 				<div class="about__header">
@@ -93,7 +94,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="section -features">
+	<section id="features" class="section -features">
 		<div class="container">
 			<div class="content -features">
 				<div class="features">
@@ -115,7 +116,7 @@
 			</div>	
 		</div>
 	</section>
-	<section class="section -system">
+	<section id="system" class="section -system">
 		<div class="container">
 			<div class="content -system">
 				<h3 class="subtitle -system">Can my computer run this game?</h3>
@@ -149,7 +150,7 @@
 				</div>
 			</div>
 	</section>
-	<section class="section -quotes">
+	<section id="quotes" class="section -quotes">
 		<div class="container">
 			<div class="content -quotes">
 				<div class="content__left">
@@ -233,16 +234,16 @@
 				<div class="footer__top">
 						<img class="logo" src="./assets/img/logo.png">
 					<nav class="nav -footer">						<a class="nav__link" href="#">Main</a>
-						<a class="nav__link" href="#">About</a>
-						<a class="nav__link" href="#">Game features</a>
-						<a class="nav__link" href="#">System requirements</a>
-						<a class="nav__link" href="#">Quotes</a>
+						<a class="nav__link" href="#about">About</a>
+						<a class="nav__link" href="#features">Game features</a>
+						<a class="nav__link" href="#system">System requirements</a>
+						<a class="nav__link" href="#quotes">Quotes</a>
 					</nav>
 					<div class="links">
-						<a class="link -facebook" href="#"><img src="./assets/img/facebook.png"></a>
-						<a class="link -twitter" href="#"><img src="./assets/img/twitter.png"></a>
-						<a class="link -YT" href="#"><img src="./assets/img/YT.png"></a>
-						<a class="link -twitch" href="#"><img src="./assets/img/twitch.png"></a>
+						<a class="link -facebook" href="https://www.facebook.com/digitalbananaschool/" target="blank"><img src="./assets/img/facebook.png"></a>
+						<a class="link -twitter" href="#" target="blank"><img src="./assets/img/twitter.png"></a>
+						<a class="link -YT" href="#" target="blank"><img src="./assets/img/YT.png"></a>
+						<a class="link -twitch" href="#" target="blank"><img src="./assets/img/twitch.png"></a>
 					</div>
 				</div>
 				<div class="footer__bottom">
